Make grids items responsive

--- a/src/pages/engagements.astro
+++ b/src/pages/engagements.astro
@@ -15,11 +15,11 @@ import LeafOnChipReference from "@static/leaf-on-chip.avif";
         color={Color.GREEN}
         image={LeafOnChipReference}
     />
-    <section class="relative max-w-7xl mx-auto text-center">
+    <section class="relative max-w-7xl mx-auto text-center px-3">
         <div class="flex flex-col items-center gap-4">
             <h1 class="font-bold text-4xl text-green-log uppercase tracking-wide">Le numérique responsable</h1>
             <h2 class="text-2xl">LOG est membre actif de plusieurs associations et groupements œuvrant pour un numérique reponsable.</h2>
-            <div class="grid grid-cols-3 gap-10 items-center mt-14">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 items-center mt-14">
                 <div class="flex flex-col items-center gap-4">
                     <img class="w-auto h-20 grayscale hover:grayscale-0 duration-150 ease-in-out" src={AGITReference} alt="Logo de l'Alliance Green IT" />
                     <p class="font-semibold text-xl">Alliance Green IT<br /><span class="font-normal">(AGIT)</span></p>
@@ -51,10 +51,10 @@ import LeafOnChipReference from "@static/leaf-on-chip.avif";
             </div>
         </div>
     </section>
-    <section class="relative max-w-7xl mx-auto text-center">
+    <section class="relative max-w-7xl mx-auto text-center px-3">
         <div class="flex flex-col items-center gap-10">
             <h1 class="font-bold text-4xl uppercase tracking-wide"><span class="text-green-log">Le numérique responsable</span> dans nos offres</h1>
-            <div class="grid grid-cols-2 gap-10 items-center">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-10 items-center">
                 <div class="flex flex-col items-center gap-10">
                     <svg class="w-auto h-20" viewBox="0 0 156.516 201.24"><g fill="#010101"><path d="M41.43 51.86c-.95-.76-2.34-.6-3.1.34l-9.7 12.13-3.81-1.91c-.32-.16-.65-.23-.98-.23a2.22 2.22 0 0 0-1.98 1.22 2.18 2.18 0 0 0-.12 1.68c.19.56.58 1.01 1.11 1.27l5.41 2.7c.9.45 2.07.19 2.71-.6l10.82-13.52c.37-.46.53-1.03.47-1.62s-.35-1.11-.81-1.48z"/><use xlink:href="#B"/><path d="M41.43 95.13c-.95-.76-2.34-.61-3.1.34l-9.7 12.13-3.81-1.91a2.15 2.15 0 0 0-.98-.24c-.23 0-.47.04-.69.11-.56.19-1.02.58-1.28 1.11a2.21 2.21 0 0 0 .99 2.96l5.41 2.7c.9.45 2.07.19 2.71-.6L41.8 98.21c.37-.46.53-1.03.47-1.62s-.35-1.11-.81-1.48z"/><use xlink:href="#B" y="43.27"/><path d="M94.14 64.9H48.17a2.21 2.21 0 0 0-2.21 2.2 2.22 2.22 0 0 0 2.21 2.21h45.97c1.22 0 2.2-.99 2.2-2.21a2.2 2.2 0 0 0-2.2-2.2z"/><use xlink:href="#C"/><use xlink:href="#C" y="21.64"/><use xlink:href="#C" y="43.27"/><path d="M113.07 18.93H88.23v-3.21a2.2 2.2 0 0 0-2.2-2.2H74.55l-.07-.42A15.67 15.67 0 0 0 58.99 0 15.67 15.67 0 0 0 43.5 13.1l-.07.42H31.95a2.2 2.2 0 0 0-2.2 2.2v3.21H4.91C2.2 18.93 0 21.13 0 23.84v143.33c0 2.71 2.2 4.91 4.91 4.91h65.82c.08-1.47.25-2.95.5-4.41H4.41V23.33h25.34v6.41H13.02a2.21 2.21 0 0 0-2.21 2.2v127.1c0 1.22.99 2.2 2.21 2.2H72.9c.54-1.52 1.18-2.99 1.89-4.41H15.22V34.13h14.52v.5a2.2 2.2 0 0 0 2.2 2.2h54.09a2.2 2.2 0 0 0 2.2-2.2v-.5h14.52v14.02c0 1.22.99 2.2 2.21 2.2a2.2 2.2 0 0 0 2.2-2.2V31.92a2.2 2.2 0 0 0-2.2-2.2H88.23v-6.41h25.34v112.67c1.48.17 2.96.43 4.41.78V23.81c0-2.71-2.2-4.91-4.91-4.91zm-65-6.04c1.3-5 5.79-8.49 10.92-8.49s9.62 3.49 10.92 8.49l.16.63H47.91zm35.76 19.56H34.15V17.93h49.68zm21.13 24.34a2.21 2.21 0 0 0-2.21 2.2v77.29c1.46-.24 2.93-.4 4.41-.47V59a2.2 2.2 0 0 0-2.2-2.2z"/></g><path d="M156.38 155.91c.21.53.18 1.08-.11 1.65-13.14 25.71-27.36 40.08-42.67 43.09-1.81.39-3.84.59-6.07.59-9.59 0-19.37-4.28-29.35-12.84-.43-.36-.66-.83-.69-1.44-.03-.6.12-1.12.48-1.54a1.89 1.89 0 0 1 1.44-.75c.6-.07 1.12.09 1.54.48 11.19 9.55 21.8 13.34 31.86 11.35 13.46-2.66 26.35-15.64 38.67-38.94-24.43-11.04-42.79-13.28-55.08-6.71-8.7 4.62-14.49 13.78-17.37 27.49 9.09-5.01 19.48-8.31 31.16-9.91.6-.07 1.14.07 1.6.43s.73.82.8 1.39c.07.6-.07 1.14-.42 1.6-.32.46-.78.73-1.39.8-12.96 1.77-24.15 5.68-33.56 11.72v.05c-4.26 2.7-8.22 5.89-11.88 9.59-.39.39-.89.6-1.49.64-.6 0-1.12-.21-1.54-.64-.39-.39-.6-.89-.64-1.49 0-.6.21-1.1.64-1.49a66.46 66.46 0 0 1 11.83-9.7c2.84-17.12 9.59-28.53 20.24-34.25 13.92-7.39 34.22-4.87 60.89 7.56.6.29.98.71 1.12 1.28h0z" fill="#61bda5" fill-rule="evenodd"/><defs ><path id="B" d="M41.43 73.5c-.95-.76-2.34-.6-3.1.34l-9.7 12.13-3.81-1.91c-.32-.16-.65-.23-.98-.23a2.22 2.22 0 0 0-1.98 1.22 2.21 2.21 0 0 0 .99 2.96l5.41 2.7c.9.45 2.07.19 2.71-.6l10.82-13.52c.37-.46.53-1.03.47-1.62s-.35-1.11-.81-1.48z"/><path id="C" d="M94.14 86.53H48.17a2.21 2.21 0 0 0-2.21 2.2 2.21 2.21 0 0 0 2.21 2.2h45.97a2.2 2.2 0 0 0 2.2-2.2 2.21 2.21 0 0 0-2.2-2.2z"/></defs></svg>
                     <h1 class="font-bold text-2xl">Prise en compte des aspects Numérique Responsable dans toutes les missions</h1>
