Remove useless css tags and make buttons fit content

--- a/src/components/homepage/section_expertise.astro
+++ b/src/components/homepage/section_expertise.astro
@@ -15,21 +15,21 @@ import HommeCourseOrdinateurReference from '@static/homme-course-ordinateur.avif
             </div>
         </div>
         <div class="flex w-full bg-gray-log text-black">
-            <div class="flex flex-col md:max-w-xl lg:max-w-none gap-8 mx-auto px-4 pt-64 pb-16 lg:pl-[15vw] lg:pr-[17vw] lg:py-24 z-20 md:text-center lg:text-left">
+            <div class="flex flex-col lg:max-w-none gap-8 px-4 pt-64 pb-16 lg:pl-[15vw] lg:pr-[17vw] lg:py-24 z-20 md:text-center lg:text-left">
                 <div class="flex flex-col gap-4 md:items-center lg:items-start">
                     <h1 class="font-bold text-3xl">Les expertises</h1>
                     <p class="text-normal text-xl lg:text-2xl">Lorem ipsum dolor sit amet. Aut inventore fuga aut eius eveniet sed voluptates voluptatem id iste reprehenderit qui minima assumenda.</p>
-                    <a class="bg-red-log text-white text-xl lg:text-2xl font-bold rounded-[12px] px-4 py-2" href="/expertise">Découvrir nos expertises</a>
+                    <a class="bg-red-log text-white text-xl lg:text-2xl font-bold rounded-[12px] px-4 py-2 w-fit" href="/expertise">Découvrir nos expertises</a>
                 </div>
                 <div class="flex flex-col gap-4 md:items-center lg:items-start">
                     <h1 class="font-bold text-3xl">Les métiers</h1>
                     <p class="text-normal text-xl lg:text-2xl">Lorem ipsum dolor sit amet. Aut inventore fuga aut eius eveniet sed voluptates voluptatem id iste reprehenderit qui minima assumenda.</p>
-                    <a class="bg-blue-log text-white text-xl lg:text-2xl font-bold rounded-[12px] px-4 py-2" href="/nous-rejoindre">Découvrir nos métiers</a>
+                    <a class="bg-blue-log text-white text-xl lg:text-2xl font-bold rounded-[12px] px-4 py-2 w-fit" href="/nous-rejoindre">Découvrir nos métiers</a>
                 </div>
                 <div class="flex flex-col gap-4 md:items-center lg:items-start">
                     <h1 class="font-bold text-3xl">L'engagement</h1>
                     <p class="text-normal text-xl lg:text-2xl">Lorem ipsum dolor sit amet. Aut inventore fuga aut eius eveniet sed voluptates voluptatem id iste reprehenderit qui minima assumenda.</p>
-                    <a class="bg-green-log text-white text-xl lg:text-2xl font-bold rounded-[12px] px-4 py-2" href="/engagements">Découvrir notre engagement</a>
+                    <a class="bg-green-log text-white text-xl lg:text-2xl font-bold rounded-[12px] px-4 py-2 w-fit" href="/engagements">Découvrir notre engagement</a>
                 </div>
             </div>
         </div>
