--- a/src/components/ui/header.astro
+++ b/src/components/ui/header.astro
@@ -45,22 +45,22 @@
                         <div class="absolute right-0 top-20 z-40 bg-white border border-black rounded-lg px-4">
                             <ul class="flex flex-col text-lg space-y-2 leading-8 text-center">
                                 <li>
-                                    <a class="hover:text-blue-log" href="#">Expertise</a>
+                                    <a class="hover:text-red-log" href="/expertise">Expertise</a>
                                 </li>
                                 <li>
                                     <a class="hover:text-blue-log" href="#">Métiers</a>
                                 </li>
                                 <li>
-                                    <a class="hover:text-blue-log" href="#">Engagements</a>
+                                    <a class="hover:text-green-log" href="/engagements">Engagements</a>
                                 </li>
                                 <li>
-                                    <a class="hover:text-blue-log" href="#">Les Loggers</a>
+                                    <a class="hover:text-yellow-log" href="/les-loggers">Les Loggers</a>
                                 </li>
                                 <li>
-                                    <a class="hover:text-blue-log" href="/joinus">Nous rejoindre</a>
+                                    <a class="hover:text-blue-log" href="/nous-rejoindre">Nous rejoindre</a>
                                 </li>
                                 <li>
-                                    <a class="hover:text-blue-log" href="#">Blog</a>
+                                    <a class="hover:text-blue-log" href="/blog">Blog</a>
                                 </li>
                             </ul>
                         </div>
