--- a/src/components/ui/banner.astro
+++ b/src/components/ui/banner.astro
@@ -11,12 +11,12 @@ const { title, subtitle, description, color, image } = Astro.props as Props;
 ---
 
 <section class="relative w-full mt-20">
-    <div class="flex flex-col lg:flex-row items-center ">
-        <div class="bg-gray-log w-full lg:w-[50vw] h-[25vw]">
-            <div class={`absolute rounded-2xl bg-${color} h-[calc(100%-2rem)] w-[25vw] -top-[2rem] left-[calc(25vw-2rem)]`}></div>
-            <img class="absolute w-[25vw] h-[calc(100%-2rem)] top-[2rem] left-[calc(25vw-6rem)] rounded-2xl" src={image} alt="Image" />
+    <div class="flex flex-col lg:flex-row">
+        <div class="flex basis-1/2 bg-gray-log">
+            <div class={`w-screen-1/2 lg:w-screen-1/4 lg:h-[95%] bg-${color} rounded-2xl translate-x-[calc(25vw+2rem)] lg:translate-x-[calc(25vw-2rem)] -translate-y-8`}></div>
+            <img class="w-screen-1/2 lg:w-screen-1/4 h-[95%] self-end rounded-2xl -translate-x-[25vw] lg:-translate-x-20 z-10" src={image} alt="Image" />
         </div>
-        <div class="flex flex-col p-10 bg-black text-white justify-center lg:w-[50vw] h-[25vw]">
+        <div class="flex bg-black basis-1/2 text-white flex-col justify-center p-10">
             <div class="flex flex-col gap-4 max-w-xl">
                 <h1 class={`font-bold text-${color} text-3xl uppercase`}>{title}</h1>
                 <h2 class="font-bold text-2xl">{subtitle}</h2>
