Remove useless import alias `@`

--- a/src/components/ui/article_card.astro
+++ b/src/components/ui/article_card.astro
@@ -1,6 +1,6 @@
 ---
 import ArticleBlogReference from '@static/article_blog.avif';
-import { Color } from '@/libs/types';
+import { Color } from '@libs/types';
 interface Props {
     title: string;
     description: string;
