--- a/src/layouts/JobOfferLayout.astro
+++ b/src/layouts/JobOfferLayout.astro
@@ -1,9 +1,9 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
 
-import Description from "@/components/job/description.astro";
-import Position from "@/components/job/position.astro";
-import TitleBanner from "@/components/ui/title_banner.astro";
+import Description from "@components/job/description.astro";
+import Position from "@components/job/position.astro";
+import TitleBanner from "@components/ui/title_banner.astro";
 
 interface Props {
     frontmatter: any;
