--- a/src/layouts/JoinUsLayout.astro
+++ b/src/layouts/JoinUsLayout.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from "@layouts/BaseLayout.astro";
 
-import JobCard from "@/components/job/job_card.astro";
+import JobCard from "@components/job/job_card.astro";
 
 import HommeClavierReference from "@static/homme-clavier.avif";
 
