--- a/src/pages/jobs/[slug].astro
+++ b/src/pages/jobs/[slug].astro
@@ -1,5 +1,5 @@
 ---
-import JobOfferLayout from '@/layouts/JobOfferLayout.astro';
+import JobOfferLayout from '@layouts/JobOfferLayout.astro';
 
 import { getCollection } from 'astro:content';
 // 1. Generate a new path for every collection entry
