--- a/src/pages/nous-rejoindre.astro
+++ b/src/pages/nous-rejoindre.astro
@@ -1,5 +1,5 @@
 ---
-import JoinUsLayout from "@/layouts/JoinUsLayout.astro";
+import JoinUsLayout from "@layouts/JoinUsLayout.astro";
 ---
 
 <JoinUsLayout></JoinUsLayout>
