--- a/src/components/homepage/section_articles.astro
+++ b/src/components/homepage/section_articles.astro
@@ -11,6 +11,7 @@ const allBlogEntries = await getCollection("blog");
     <div class="flex flex-col lg:flex-row gap-10 justify-center items-center mx-auto max-lg:px-4 py-8">
         {allBlogEntries.slice(0, 3).map((article) => (
             <ArticleCard
+                image={article.data.image}
                 title={article.data.title}
                 description={article.data.description}
                 class="lg:flex"
