--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -55,6 +55,7 @@ const allBlogEntries = await getCollection("blog");
                 <div class="grid grid-cols-3 gap-10">
                     {allBlogEntries.map((article) => (
                         <ArticleCard
+                            image={article.data.image}
                             title={article.data.title}
                             description={article.data.description}
                             class="lg:flex"
