--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,6 +13,8 @@ const { title } = Astro.props;
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{title}</title>
+        <link rel="icon" href="/favicon.svg" type="image/svg+xml"> {/* Modern browsers */}
+        <link rel="icon" href="/favicon.ico" type="image/x-icon"> {/* Fallback for older browsers */}
     </head>
     <body class="text-black bg-white">
         <Header />
