--- a/src/components/ui/article_card.astro
+++ b/src/components/ui/article_card.astro
@@ -13,7 +13,9 @@ const { image, title, description, class: className = "lg:flex", color = Color.R
 ---
 
 <div class={className + ` overflow-hidden flex-col items-center text-center max-w-sm border-2 ${dark === true ? "border-black" : `border-${color}`} rounded-t-[20px] font-mono`}>
-    <img src={image} alt="Image d'un article" />
+    <a href={href}>
+        <img src={image} alt="Image d'un article" />
+    </a>
     <p class={`bg-${color} border-y-2 border-y-black text-white text-2xl px-1 py-2 w-full`}>{title}</p>
     <p class="text-xl px-4 pt-6 line-clamp-3">{description}</p>
     <a class={`font-bold text-xl text-${color} px-4 pt-3 pb-6`} href={href}>En savoir plus</a>
