Replace `Partenariats` by `Métiers` in footer

--- a/src/components/ui/footer.astro
+++ b/src/components/ui/footer.astro
@@ -44,7 +44,7 @@
                         </li>
                         <li>
                             <a class="decoration-2 hover:underline hover:underline-offset-4" href="#">
-                                Partenariat
+                                Métiers
                             </a>
                         </li>
                         <li>
